ChessBoard: - changed for loop to forEach - commented out printChessBoard() ChessBoardTest: - changed .get(0) to .getFirst()